Fix the text align

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,7 @@ h1 {
 section {
   display: block;
   margin: 3rem 0;
+  text-align: center;
 }
 
 .image, .body {
